--- a/appengine/standard_python37/hello_world/templates/form.html
+++ b/appengine/standard_python37/hello_world/templates/form.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <!-- <form method="post" action="thanks"> -->
 <form>
     <input name="food" type="text"></input>
@@ -29,9 +31,11 @@ version of FLASK -->
 </form>
     
 
+
 <!-- <form  method="post">
     <h2>Add a button</h2>
     <input type="text" name="food">
     <button type="button">Add</button>
     <li><a href="{{ url_for('thanks') }}">Register</a>
 </form> -->
+{% endblock %}  
